<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:id="@+id/bombSettingsLayout"
    android:orientation="vertical"
    tools:context=".BombSettingFragment">


    <TextView
        android:id="@+id/extInFo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/txt_fake"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txt_min"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bombTimer"
        app:layout_constraintStart_toEndOf="@+id/bombTimer"
        app:layout_constraintTop_toTopOf="@+id/bombTimer"
        app:layout_constraintVertical_bias="0.622" />


    <EditText
        android:id="@+id/bombTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:autofillHints="@string/txt_hint_300"
        android:hint="@string/txt_hint_300"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_bomb_timer"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArmTime" />

    <TextView
        android:id="@+id/txtArmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="93dp"
        android:text="@string/txt_arming"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extInFo" />


    <EditText
        android:id="@+id/editArmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:hint="@string/txt_hint_20"
        android:autofillHints="@string/txt_hint_20"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtArmTime"
        app:layout_constraintStart_toEndOf="@+id/txtArmTime"
        app:layout_constraintTop_toTopOf="@+id/txtArmTime"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txt_seconds"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editArmTime"
        app:layout_constraintStart_toEndOf="@+id/editArmTime"
        app:layout_constraintTop_toTopOf="@+id/editArmTime"
        app:layout_constraintVertical_bias="0.656" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_wrong"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editMinusTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:autofillHints="@string/txt_hint_20"
        android:hint="@string/txt_hint_300"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txt_seconds"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editMinusTime"
        app:layout_constraintStart_toEndOf="@+id/editMinusTime"
        app:layout_constraintTop_toTopOf="@+id/editMinusTime"
        app:layout_constraintVertical_bias="0.656" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/txt_start"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bombTimer"
        app:layout_constraintStart_toStartOf="@+id/bombTimer" />

</androidx.constraintlayout.widget.ConstraintLayout>